// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/monitoring/requestpanel should render 1`] = `
Array [
  <div
    className="msla-retrypanel-callout-pager"
  >
    <div
      className="msla-pager-v2"
      onClick={[Function]}
    >
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Previous"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronLeft"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip0"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Previous
          </div>
        </div>
      </div>
      <div
        className="msla-pager-v2--inner"
      >
        <span
          className="css-118"
        >
          1 of 1
        </span>
      </div>
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Next"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronRight"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip4"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Next
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="msla-panel-callout-content"
  >
    <div
      className="msla-trace-inputs-outputs"
    >
      <div
        className="msla-trace-inputs-outputs-header"
      >
        <div
          className="msla-trace-inputs-outputs-header-text"
        >
          Duration
        </div>
      </div>
      <div
        className="msla-trace-values"
      >
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Duration
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Duration"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token plain"
                  >
                     minute
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Start time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Start time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    52
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            End time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="End time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    53
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>,
]
`;

exports[`lib/monitoring/requestpanel should render with a request 1`] = `
Array [
  <div
    className="msla-retrypanel-callout-pager"
  >
    <div
      className="msla-pager-v2"
      onClick={[Function]}
    >
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Previous"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronLeft"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip8"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Previous
          </div>
        </div>
      </div>
      <div
        className="msla-pager-v2--inner"
      >
        <span
          className="css-118"
        >
          1 of 1
        </span>
      </div>
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Next"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronRight"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip12"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Next
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="msla-panel-callout-content"
  >
    <div
      className="msla-trace-inputs-outputs"
    >
      <div
        className="msla-trace-inputs-outputs-header"
      >
        <div
          className="msla-trace-inputs-outputs-header-text"
        >
          Duration
        </div>
      </div>
      <div
        className="msla-trace-values"
      >
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Duration
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Duration"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token plain"
                  >
                     minute
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Start time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Start time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    52
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            End time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="End time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    53
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      className="msla-trace-inputs-outputs"
    >
      <div
        className="msla-trace-inputs-outputs-header"
      >
        <div
          className="msla-trace-inputs-outputs-header-text"
        >
          Request
        </div>
      </div>
      <div
        className="msla-trace-values"
      >
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Method
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Method"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token plain"
                  >
                    GET
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            URI
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="URI"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token plain"
                  >
                    https
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token comment"
                    style={
                      Object {
                        "color": "rgb(0, 128, 0)",
                      }
                    }
                  >
                    //httpbin.org/get
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Headers
          </label>
          <div
            className="msla-trace-value-text msla-trace-value-key-value-pairs"
          >
            <div
              className="ms-Viewport"
              style={
                Object {
                  "minHeight": 1,
                  "minWidth": 1,
                }
              }
            >
              <div
                aria-label="Headers"
                className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-119"
                data-automationid="DetailsList"
                data-is-scrollable="false"
              >
                <div
                  aria-colcount={2}
                  aria-readonly="true"
                  aria-rowcount={1}
                  role="grid"
                >
                  <div
                    className="ms-DetailsList-headerWrapper"
                    onKeyDown={[Function]}
                    role="presentation"
                  >
                    <div
                      aria-label="Headers"
                      className="ms-FocusZone css-137 ms-DetailsHeader root-121"
                      data-automationid="DetailsHeader"
                      data-focuszone-id="FocusZone18"
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDownCapture={[Function]}
                      onMouseMove={[Function]}
                      role="row"
                    >
                      <div
                        aria-label="Key"
                        aria-sort="none"
                        className="ms-DetailsHeader-cell is-actionable root-138"
                        data-automationid="ColumnsHeaderColumn"
                        data-is-draggable={false}
                        data-is-focusable="true"
                        data-item-key="$key"
                        draggable={false}
                        role="columnheader"
                        style={
                          Object {
                            "width": 120,
                          }
                        }
                      >
                        <span
                          className="cellTooltip-146"
                        >
                          <span
                            className="ms-DetailsHeader-cellTitle cellTitle-144"
                            id="header17-$key"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                          >
                            <span
                              className="ms-DetailsHeader-cellName cellName-145"
                              id="header17-$key-name"
                            >
                              Key
                            </span>
                          </span>
                        </span>
                      </div>
                      <div
                        aria-hidden={true}
                        className="ms-DetailsHeader-cellSizer cellSizer-128 cellSizerStart-129"
                        data-is-focusable={false}
                        data-sizer-index={0}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        role="button"
                      />
                      <div
                        aria-label="Value"
                        aria-sort="none"
                        className="ms-DetailsHeader-cell is-actionable root-138"
                        data-automationid="ColumnsHeaderColumn"
                        data-is-draggable={false}
                        data-is-focusable="true"
                        data-item-key="$value"
                        draggable={false}
                        role="columnheader"
                        style={
                          Object {
                            "width": 120,
                          }
                        }
                      >
                        <span
                          className="cellTooltip-146"
                        >
                          <span
                            className="ms-DetailsHeader-cellTitle cellTitle-144"
                            id="header17-$value"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                          >
                            <span
                              className="ms-DetailsHeader-cellName cellName-145"
                              id="header17-$value-name"
                            >
                              Value
                            </span>
                          </span>
                        </span>
                      </div>
                      <div
                        aria-hidden={true}
                        className="ms-DetailsHeader-cellSizer cellSizer-128 cellSizerEnd-130"
                        data-is-focusable={false}
                        data-sizer-index={1}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        role="button"
                      />
                    </div>
                  </div>
                  <div
                    className="ms-DetailsList-contentWrapper"
                    onKeyDown={[Function]}
                    role="presentation"
                  >
                    <div
                      className="ms-SelectionZone"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onDoubleClick={[Function]}
                      onFocusCapture={[Function]}
                      onKeyDown={[Function]}
                      onKeyDownCapture={[Function]}
                      onMouseDown={[Function]}
                      onMouseDownCapture={[Function]}
                      role="presentation"
                    >
                      <div
                        className="ms-FocusZone css-137 focusZone-120"
                        data-focuszone-id="FocusZone19"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseDownCapture={[Function]}
                      >
                        <div
                          className="ms-List"
                        >
                          <div
                            className="ms-List-surface"
                            role="presentation"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>,
]
`;

exports[`lib/monitoring/requestpanel should render with a response 1`] = `
Array [
  <div
    className="msla-retrypanel-callout-pager"
  >
    <div
      className="msla-pager-v2"
      onClick={[Function]}
    >
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Previous"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronLeft"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip28"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Previous
          </div>
        </div>
      </div>
      <div
        className="msla-pager-v2--inner"
      >
        <span
          className="css-118"
        >
          1 of 1
        </span>
      </div>
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Next"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronRight"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip32"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Next
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="msla-panel-callout-content"
  >
    <div
      className="msla-trace-inputs-outputs"
    >
      <div
        className="msla-trace-inputs-outputs-header"
      >
        <div
          className="msla-trace-inputs-outputs-header-text"
        >
          Duration
        </div>
      </div>
      <div
        className="msla-trace-values"
      >
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Duration
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Duration"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token plain"
                  >
                     minute
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Start time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Start time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    52
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            End time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="End time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    53
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      className="msla-trace-inputs-outputs"
    >
      <div
        className="msla-trace-inputs-outputs-header"
      >
        <div
          className="msla-trace-inputs-outputs-header-text"
        >
          Response
        </div>
      </div>
      <div
        className="msla-trace-values"
      >
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Status code
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Status code"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    200
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Headers
          </label>
          <div
            className="msla-trace-value-text msla-trace-value-key-value-pairs"
          >
            <div
              className="ms-Viewport"
              style={
                Object {
                  "minHeight": 1,
                  "minWidth": 1,
                }
              }
            >
              <div
                aria-label="Headers"
                className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-119"
                data-automationid="DetailsList"
                data-is-scrollable="false"
              >
                <div
                  aria-colcount={2}
                  aria-readonly="true"
                  aria-rowcount={1}
                  role="grid"
                >
                  <div
                    className="ms-DetailsList-headerWrapper"
                    onKeyDown={[Function]}
                    role="presentation"
                  >
                    <div
                      aria-label="Headers"
                      className="ms-FocusZone css-137 ms-DetailsHeader root-121"
                      data-automationid="DetailsHeader"
                      data-focuszone-id="FocusZone38"
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDownCapture={[Function]}
                      onMouseMove={[Function]}
                      role="row"
                    >
                      <div
                        aria-label="Key"
                        aria-sort="none"
                        className="ms-DetailsHeader-cell is-actionable root-138"
                        data-automationid="ColumnsHeaderColumn"
                        data-is-draggable={false}
                        data-is-focusable="true"
                        data-item-key="$key"
                        draggable={false}
                        role="columnheader"
                        style={
                          Object {
                            "width": 120,
                          }
                        }
                      >
                        <span
                          className="cellTooltip-146"
                        >
                          <span
                            className="ms-DetailsHeader-cellTitle cellTitle-144"
                            id="header37-$key"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                          >
                            <span
                              className="ms-DetailsHeader-cellName cellName-145"
                              id="header37-$key-name"
                            >
                              Key
                            </span>
                          </span>
                        </span>
                      </div>
                      <div
                        aria-hidden={true}
                        className="ms-DetailsHeader-cellSizer cellSizer-128 cellSizerStart-129"
                        data-is-focusable={false}
                        data-sizer-index={0}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        role="button"
                      />
                      <div
                        aria-label="Value"
                        aria-sort="none"
                        className="ms-DetailsHeader-cell is-actionable root-138"
                        data-automationid="ColumnsHeaderColumn"
                        data-is-draggable={false}
                        data-is-focusable="true"
                        data-item-key="$value"
                        draggable={false}
                        role="columnheader"
                        style={
                          Object {
                            "width": 120,
                          }
                        }
                      >
                        <span
                          className="cellTooltip-146"
                        >
                          <span
                            className="ms-DetailsHeader-cellTitle cellTitle-144"
                            id="header37-$value"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                          >
                            <span
                              className="ms-DetailsHeader-cellName cellName-145"
                              id="header37-$value-name"
                            >
                              Value
                            </span>
                          </span>
                        </span>
                      </div>
                      <div
                        aria-hidden={true}
                        className="ms-DetailsHeader-cellSizer cellSizer-128 cellSizerEnd-130"
                        data-is-focusable={false}
                        data-sizer-index={1}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        role="button"
                      />
                    </div>
                  </div>
                  <div
                    className="ms-DetailsList-contentWrapper"
                    onKeyDown={[Function]}
                    role="presentation"
                  >
                    <div
                      className="ms-SelectionZone"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onDoubleClick={[Function]}
                      onFocusCapture={[Function]}
                      onKeyDown={[Function]}
                      onKeyDownCapture={[Function]}
                      onMouseDown={[Function]}
                      onMouseDownCapture={[Function]}
                      role="presentation"
                    >
                      <div
                        className="ms-FocusZone css-137 focusZone-120"
                        data-focuszone-id="FocusZone39"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onMouseDownCapture={[Function]}
                      >
                        <div
                          className="ms-List"
                        >
                          <div
                            className="ms-List-surface"
                            role="presentation"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Body
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Body"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    {
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    }
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>,
]
`;

exports[`lib/monitoring/requestpanel should render with a secured request 1`] = `
Array [
  <div
    className="msla-retrypanel-callout-pager"
  >
    <div
      className="msla-pager-v2"
      onClick={[Function]}
    >
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Previous"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronLeft"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip20"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Previous
          </div>
        </div>
      </div>
      <div
        className="msla-pager-v2--inner"
      >
        <span
          className="css-118"
        >
          1 of 1
        </span>
      </div>
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Next"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronRight"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip24"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Next
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="msla-panel-callout-content"
  >
    <div
      className="msla-trace-inputs-outputs"
    >
      <div
        className="msla-trace-inputs-outputs-header"
      >
        <div
          className="msla-trace-inputs-outputs-header-text"
        >
          Duration
        </div>
      </div>
      <div
        className="msla-trace-values"
      >
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Duration
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Duration"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token plain"
                  >
                     minute
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Start time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Start time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    52
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            End time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="End time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    53
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
      </div>
    </div>
    <section
      className="msla-trace-inputs-outputs"
    >
      <div
        className="msla-trace-inputs-outputs-header"
      >
        <div
          className="msla-trace-inputs-outputs-header-text"
          style={
            Object {
              "borderColor": "rgba(71,71,71, 0.7)",
            }
          }
        >
          Request
        </div>
      </div>
      <div
        className="msla-trace-values"
      >
        <div
          className="msla-trace-inputs-outputs-secured"
        >
          <div
            className="msla-trace-secured-text"
          >
            Content not shown due to security configuration.
          </div>
        </div>
      </div>
    </section>
  </div>,
]
`;

exports[`lib/monitoring/requestpanel should render with a secured response 1`] = `
Array [
  <div
    className="msla-retrypanel-callout-pager"
  >
    <div
      className="msla-pager-v2"
      onClick={[Function]}
    >
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Previous"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronLeft"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip40"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Previous
          </div>
        </div>
      </div>
      <div
        className="msla-pager-v2--inner"
      >
        <span
          className="css-118"
        >
          1 of 1
        </span>
      </div>
      <div
        className="msla-pager-failed-container"
      >
        <div
          className="ms-TooltipHost root-109"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          role="none"
        >
          <button
            aria-disabled={true}
            aria-label="Next"
            className="ms-Button ms-Button--icon is-disabled root-110"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-111"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 ms-Button-icon icon-113"
                data-icon-name="ChevronRight"
                style={
                  Object {
                    "fontFamily": undefined,
                  }
                }
              />
              <span
                className="ms-Button-textContainer textContainer-112"
              />
            </span>
          </button>
          <div
            hidden={true}
            id="tooltip44"
            style={
              Object {
                "border": 0,
                "height": 1,
                "margin": -1,
                "overflow": "hidden",
                "padding": 0,
                "position": "absolute",
                "whiteSpace": "nowrap",
                "width": 1,
              }
            }
          >
            Next
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="msla-panel-callout-content"
  >
    <div
      className="msla-trace-inputs-outputs"
    >
      <div
        className="msla-trace-inputs-outputs-header"
      >
        <div
          className="msla-trace-inputs-outputs-header-text"
        >
          Duration
        </div>
      </div>
      <div
        className="msla-trace-values"
      >
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Duration
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Duration"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token plain"
                  >
                     minute
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            Start time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="Start time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    52
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
        <section
          className="msla-trace-value-label"
        >
          <label
            className="msla-trace-value-display-name"
          >
            End time
          </label>
          <div
            className="msla-colorizer-json-body"
          >
            <div
              aria-label="End time"
              aria-readonly={true}
              className="msla-colorizer-wrapper"
              role="textbox"
              tabIndex={0}
            >
              <pre
                className="prism-code language-json"
                style={
                  Object {
                    "backgroundColor": "#ffffff",
                    "color": "#000000",
                  }
                }
              >
                <div
                  className="token-line"
                  style={
                    Object {
                      "backgroundColor": null,
                      "color": "#000000",
                    }
                  }
                >
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    9
                  </span>
                  <span
                    className="token plain"
                  >
                    /
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    2022
                  </span>
                  <span
                    className="token punctuation"
                    style={
                      Object {
                        "color": "rgb(4, 81, 165)",
                      }
                    }
                  >
                    ,
                  </span>
                  <span
                    className="token plain"
                  >
                     
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    1
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    53
                  </span>
                  <span
                    className="token operator"
                    style={
                      Object {
                        "color": "rgb(0, 0, 0)",
                      }
                    }
                  >
                    :
                  </span>
                  <span
                    className="token number"
                    style={
                      Object {
                        "color": "rgb(9, 134, 88)",
                      }
                    }
                  >
                    00
                  </span>
                  <span
                    className="token plain"
                  >
                     PM
                  </span>
                </div>
              </pre>
            </div>
          </div>
        </section>
      </div>
    </div>
    <section
      className="msla-trace-inputs-outputs"
    >
      <div
        className="msla-trace-inputs-outputs-header"
      >
        <div
          className="msla-trace-inputs-outputs-header-text"
          style={
            Object {
              "borderColor": "rgba(71,71,71, 0.7)",
            }
          }
        >
          Response
        </div>
      </div>
      <div
        className="msla-trace-values"
      >
        <div
          className="msla-trace-inputs-outputs-secured"
        >
          <div
            className="msla-trace-secured-text"
          >
            Content not shown due to security configuration.
          </div>
        </div>
      </div>
    </section>
  </div>,
]
`;
